updated styles for content and footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,27 +42,51 @@ li a {
 		font-weight:300;
 		color:#FFF;
 	}
+/*JUMBOTRON*/
 
 
 
-
-#products{
-
+/*CONTENT*/
+.featured{
+	margin-bottom:60px;
 }
-	.products{
-		width:100%;
+
+.product{
+	background-color:#edf1f4;
+	border-radius:5%;
+	border:5px solid rgb(252,252,252);
+}
+	.product a{
+		margin-bottom:10px;
 	}
 
-.footer{
-	height:250px;
-	background-color:#262626;
-	padding-top:50px;
-	margin-top:50px;
-	color:#e6e6e6;
+.img-box{
+	margin:10px 0px;
+
 }
 
+/*END OF CONTENTS*/
 
-.logoFt{
-	width:25%;
-	margin-left:175px;
+/*FOOTER*/
+footer{
+	background-color:#231f20;
+	padding-top: 20px;
 }
+	footer a{
+		color:#bfc0c1;
+	}
+.contact-info{
+	padding-top:15px;
+	padding-left:40px;
+	border-right:1px solid #333;
+	border-left:1px solid #333;
+}
+.social{
+	padding:15px;
+}
+footer .fine-print{
+	margin-top:15px;
+	margin-bottom:15px;
+	color:#505050;
+}
+/*END OF FOOTER*/
